--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport": "^0.4.1",
     "passport-oauth": "^1.0.0",
     "request": "^2.88.2",
+    "simple-node-logger": "^21.8.12",
     "tmi.js": "^1.8.5",
     "twitch-js": "^2.0.0-beta.42"
   },
