--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@twurple/eventsub-ngrok": "^5.0.1",
     "@twurple/pubsub": "^5.0.1",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
