--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node dist/bot.js",
-    "build": "tsc",
+    "start": "npm run build && node dist/bot.js",
+    "build": "tsc -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "dually8",
@@ -17,22 +17,27 @@
     "@twurple/eventsub": "^5.0.1",
     "@twurple/eventsub-ngrok": "^5.0.1",
     "@twurple/pubsub": "^5.0.1",
+    "axios": "^0.21.4",
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "fastify": "^3.21.6",
     "handlebars": "^4.7.7",
     "node-fetch": "^2.6.2",
+    "open": "^8.2.1",
     "passport": "^0.4.1",
     "passport-oauth": "^1.0.0",
     "request": "^2.88.2",
     "simple-node-logger": "^21.8.12",
+    "sqlite3": "^5.0.2",
     "tmi.js": "^1.8.5",
     "twitch-js": "^2.0.0-beta.42"
   },
   "devDependencies": {
     "@types/node": "^16.9.1",
+    "@types/sqlite3": "^3.1.7",
     "@types/tmi.js": "^1.7.2",
     "typescript": "^4.4.3"
   }
