--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^16.9.1",
     "@types/sqlite3": "^3.1.7",
     "@types/tmi.js": "^1.7.2",
+    "ts-node": "^10.3.0",
     "typescript": "^4.4.3"
   }
 }
