--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "author": "dually8",
   "license": "MIT",
   "dependencies": {
-    "@twurple/api": "^5.0.1",
-    "@twurple/auth": "^5.0.1",
-    "@twurple/chat": "^5.0.1",
-    "@twurple/eventsub": "^5.0.1",
-    "@twurple/eventsub-ngrok": "^5.0.1",
-    "@twurple/pubsub": "^5.0.1",
+    "@twurple/api": "^6.0.6",
+    "@twurple/auth": "^6.0.6",
+    "@twurple/chat": "^6.0.6",
+    "@twurple/eventsub-http": "^6.0.6",
+    "@twurple/eventsub-ngrok": "^6.0.6",
+    "@twurple/pubsub": "^6.0.6",
     "axios": "^0.21.4",
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.7",
@@ -32,14 +32,13 @@
     "request": "^2.88.2",
     "simple-node-logger": "^21.8.12",
     "sqlite3": "^5.0.2",
-    "tmi.js": "^1.8.5",
-    "twitch-js": "^2.0.0-beta.42"
+    "tmi.js": "^1.8.5"
   },
   "devDependencies": {
     "@types/node": "^16.9.1",
     "@types/sqlite3": "^3.1.7",
     "@types/tmi.js": "^1.7.2",
-    "ts-node": "^10.3.0",
-    "typescript": "^4.4.3"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
