feat: wip trying to get new apis to work

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,7 @@
             "args": [
                 "${workspaceFolder}/src/bot.ts"
             ],
+            "cwd": "${workspaceFolder}",
             "env": {
                 "TS_NODE_PROJECT": "${workspaceFolder}/tsconfig.json"
             }
